# agentix

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  LUDO (standalone).html  LUDO-PRD-Unified.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  revendor.yml
constants/: cluster.yaml
contracts/: README.md  contract_a.openapi.yaml  session-event.schema.json
docs/: a2a.md  amos.md  async.md  budgets.md  context.md  contracts.md  cors-strategy.md  db-conventions.md  deployment-domains.md  dev-standards.md  docker-baseline.md  drivers.md  email-and-notifications.md  engine.md  env-and-secrets.md  eval.md  external-integrations.md  isolation.md  kernel-config-reference.md  licensing-policy.md  llm.md  logging.md  memory.md  network-and-ports.md  overview.md  plugins.md  quickstart.md  routing.md  seams.md  session.md  skills.md  sqlite_schema.sql  sync.md  tooling-standards.md  tools.md  vendor-licenses.md
docs/CRIE/: 001_cluster_consolidation.md  002_post_consolidation_sweep.md  003_rename_debrand_and_isolation.md  docs-cleanup-2026-07-16.md  readme-2026-07-15.md
docs/proposals/: agent-skills-catalog.md  agentic-cluster-a2a.md  eval-validation.md  omg-public-cli-split.md  tool-skill-calling.md  tools-skills-mcp.md
libs/python/: README.md
libs/python/ludo_shared/: __init__.py  _generated.py  introspection.py  sse.py
libs/swift/LudoShared/: Generated.swift
libs/ts/ludo_shared/: generated.d.ts  generated.js
scripts/: check_config_drift.py  check_doc_links.py  check_shared_drift.py  gen_shared.py  install.sh  revendor.py  vendor_manifest.py
src/agentix/: __init__.py  config.py  embeddings.py  event_types.py  events.py  runtime.py
src/agentix.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/agentix/a2a/: __init__.py  _agent_store.py  card.py
src/agentix/core/: __init__.py  agent_dispatcher.py  checkpoint.py  context_manager.py  engine.py  session.py  working_memory.py
src/agentix/core/middleware/: cost_tracking.py  dangling_tool_call.py  retry.py
src/agentix/drivers/: __init__.py  _compat.py  base.py  chat.py  cost.py  embedding.py  factory.py  limiter.py  object_store.py  registry.py  router.py  session.py  speech.py
src/agentix/drivers/adapters/: __init__.py  adversarial.py  anthropic.py  anthropic_auth.py  gemini.py  groq.py  hf.py  huble.py  minio.py  ollama.py  openai.py
src/agentix/drivers/adapters/intrinsic/: __init__.py  adversarial.py  huble.py  local_fs.py  local_fs_object.py  postgresql.py  sqlite.py
src/agentix/llm/: adversarial.py  anthropic.py  anthropic_auth.py  base.py  cost_recorder.py  groq.py  huble.py  limiter.py  openai.py  router.py
src/agentix/skills/: __init__.py  catalog.py  consult_skill.py  loader.py
src/agentix/storage/: README.md  memory.py  minio_store.py  sqlite_store.py  vector_index.py
src/agentix/tools/: __init__.py  _sandbox.py  base.py  builtin.py  factory.py  primitives.py  record_attempt.py  registry.py  resilience.py
src/agentix_cli/: __main__.py  _config.py  main.py
src/agentix_cli/commands/: agent.py  config_cmd.py  context.py  daemon.py  driver.py  memory.py  scaffold.py  session.py  skill.py  tool.py
src/agentix_sdk/: __init__.py  client.py  models.py
src/agentixd/: _config.py  _kernel.py  main.py
src/agentixd/routes/: admin.py  sessions.py
src/agentixd/scaffold/: agent_tpl.py
templates/: env.template  gitignore.base  ruff.toml
tests/integration/: stub_llm.py  test_stub_llm.py
tests/unit/: conftest.py  test_consult_skill.py  test_event_contract_drift.py  test_kernel_purity.py  test_kernel_standalone.py  test_skill_catalog.py
tests/unit/a2a/: test_card.py
tests/unit/core/: test_context_manager.py  test_parallel_dispatch.py  test_session_resume.py
tests/unit/drivers/: fake_dotted_driver.py  test_anthropic_adapter.py  test_anthropic_auth.py  test_base.py  test_billing_header.py  test_build_drivers.py  test_chat_types.py  test_cost.py  test_driver_lease.py  test_embedding.py  test_failover_chain.py  test_gemini_ollama_adapter.py  test_hf_stt.py  test_huble_adapter.py  test_limiter.py  test_local_file_store.py  test_local_fs_object.py  test_minio_object_store.py  test_no_legacy_imports.py  test_openai_groq_adapter.py  test_registry.py  test_sqlite_relational.py  test_turn_attribution.py
tests/unit/llm/: test_anthropic_auth.py  test_billing_header.py  test_build_llm_provider.py  test_cost_recorder.py
tests/unit/storage/: test_minio_store.py  test_session_lease.py  test_sqlite_store.py
tests/unit/sync/: test_sync_facade.py
tests/unit/tools/: test_factory.py  test_primitives.py  test_resilience.py
