[project]
name = "agentix"
version = "0.6.1"
description = "Agentix — the reusable, app-agnostic agent kernel"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "LicenseRef-BSL-1.1" }
authors = [{ name = "euroblaze" }]

# Kernel runtime deps — intrinsic core only. Vendor SDKs are opt-in extras (see below).
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.8",
    "aiosqlite>=0.20",
    "structlog>=24.4",
    "python-frontmatter>=1.1",
]

[project.optional-dependencies]
# Intrinsic extras (open-source infra, no commercial API ToS)
minio      = ["minio>=7.2"]
hf         = ["huggingface_hub>=0.24"]
postgresql = ["asyncpg>=0.29"]

# Vendor extras (commercial AI APIs — consumer accepts provider ToS independently)
# See docs/vendor-licenses.md for ToS links and SDK license details.
anthropic  = ["anthropic>=0.40"]
openai     = ["openai>=1.55"]
groq       = ["groq>=0.13"]

# Convenience bundles
broker        = ["nats-py>=2.6"]
all-intrinsic = ["agentix[minio,hf,postgresql]"]
all-vendors   = ["agentix[anthropic,openai,groq]"]
all           = ["agentix[all-intrinsic,all-vendors,broker]"]

[project.urls]
Repository = "https://github.com/euroblaze/agentix"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Kernel-only wheel. The generated wire packages (libs/python/ludo_shared,
# libs/internal/ludo_internal) are cluster vendoring machinery — canonical here
# (scripts/gen_shared.py), consumed by consumers VENDORING them, never via this
# wheel. The kernel owns its own event vocabulary (agentix.event_types /
# agentix.events), drift-guarded against contracts/session-event.schema.json.
packages = ["src/agentix"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "respx>=0.22",
    "ruff>=0.8",
    "mypy>=1.13",
    "pyyaml>=6.0",
    "types-PyYAML>=6.0",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests", "libs"]
# Canonical wire-contract packages are generated + drift-checked, not re-formatted here.
extend-exclude = ["libs"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "C4", "SIM", "RUF", "ASYNC"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ASYNC240"]
# Spike-harness primitives deliberately use blocking pathlib + simple try/except.
"src/agentix/tools/spike/apply_patch.py" = ["ASYNC240"]
"src/agentix/tools/spike/run_command.py" = ["SIM105"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src:libs/python:libs/internal"

[[tool.mypy.overrides]]
module = ["minio.*", "frontmatter.*", "nats.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--strict-markers", "--strict-config"]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src", "libs/python", "libs/internal"]
markers = [
    "integration: tests that require live MinIO/SQLite or a provider key",
    "stress: long-running concurrency / failure-mode stress tests",
]

[tool.coverage.run]
source = ["src/agentix"]
branch = true

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
